# feed-forward-mnist

./: .gitignore  Cargo.toml
.cargo/: config.example.toml  config.toml
src/: ff_mlp.rs  ff_module.rs  ff_optimizer.rs  main.rs  mlp.rs  negatif_generator.rs  utils.rs
