[package]
name = "ff-mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = "0.5"
tch = "0.10"
clap = "4"
derivative = "2"
tch-utils = {git = "https://github.com/oxabz/tch-utils.git", branch = "main"}